Include linux ARM jre